force-app/main/default/objects/GFP_Coefficienti_Piano_Ammortamento__c/GFP_Coefficienti_Piano_Ammortamento__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Coefficienti utilizzati per il calcolo del piano ammortamento</description>
    <label>GFP Coefficienti Piano Ammortamento</label>
</CustomObject>