force-app/main/default/objects/GFP_Coefficienti_Piano_Ammortamento__c/fields/QuotaCapitale_10__c.field-meta.xml
<CustomField>
    <fullName>QuotaCapitale_10__c</fullName>
    <description>Quota Capitale relativa all&#39;anno 10</description>
    <label>QuotaCapitale_10</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>