force-app/main/default/objects/GFP_Coefficienti_Piano_Ammortamento__c/fields/QuotaCapitale_11__c.field-meta.xml
<CustomField>
    <fullName>QuotaCapitale_11__c</fullName>
    <description>Quota Capitale relativa all&#39;anno 11</description>
    <label>QuotaCapitale_11</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>