force-app/main/default/objects/GFP_Coefficienti_Piano_Ammortamento__c/fields/QuotaInteressi_0__c.field-meta.xml
<CustomField>
    <fullName>QuotaInteressi_0__c</fullName>
    <description>Quota Interessi relativa all&#39;anno 0</description>
    <label>QuotaInteressi_0</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>