force-app/main/default/objects/GFP_Coefficienti_Piano_Ammortamento__c/fields/QuotaInteressi_10__c.field-meta.xml
<CustomField>
    <fullName>QuotaInteressi_10__c</fullName>
    <description>Quota Interessi relativa all&#39;anno 10</description>
    <label>QuotaInteressi_10</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>