force-app/main/default/objects/GFP_Coefficienti_Piano_Ammortamento__c/fields/QuotaInteressi_11__c.field-meta.xml
<CustomField>
    <fullName>QuotaInteressi_11__c</fullName>
    <description>Quota Interessi relativa all&#39;anno 11</description>
    <label>QuotaInteressi_11</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>